--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="favicon.ico" />
+
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,11 +35,11 @@
     </div>
 
     <nav
-      class="navbar navbar-expand-sm navbar-light py-3 fixed-top"
+      class="navbar navbar-expand-sm navbar-light py-2 fixed-top"
       style="background: rgba(227, 242, 253, 0.8)"
     >
-      <div class="container">
-        <a href="#" class="navbar-brand">Siyu Chen</a>
+      <div class="container mr-4">
+        <a href="#" class="navbar-brand">${Siyu Chen}</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,16 +55,39 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#aboutme" class="nav-link mx-3">About Me</a>
+              <a href="#aboutme" class="nav-link mx-2">About Me</a>
             </li>
             <li class="nav-item">
-              <a href="#work" class="nav-link mx-3">Work Experience</a>
+              <a href="#work" class="nav-link mx-2">Work Experience</a>
             </li>
             <li class="nav-item">
-              <a href="#projects" class="nav-link mx-3">Projects</a>
+              <a href="#projects" class="nav-link mx-2">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="./Siyu_Chen_Resume.pdf"
+                class="nav-link mx-2"
+                target="_blank"
+              >
+                Resume</a
+              >
             </li>
           </ul>
         </div>
+      </div>
+      <div class="me-5">
+        <a href="https://github.com/syuChen1" class="mx-1" target="_blank"
+          ><i class="fab fa-github fa-2x"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/siyu-chen-6a7a741b4/"
+          target="_blank"
+          class="mx-1"
+          ><i class="fab fa-linkedin fa-2x"></i
+        ></a>
+        <a href="mailto: siyuchen.dev@gmail.com" class="mx-1"
+          ><i class="far fa-envelope fa-2x"></i
+        ></a>
       </div>
     </nav>
     <canvas id="bg"></canvas>
@@ -620,9 +644,25 @@
         </div>
       </section>
 
-      <blockquote>
-        <p>Thanks for watching!</p>
-      </blockquote>
+      <section id="end">
+        <div class="section-container text-center">
+          <h4 class="mb-3">Thanks for watching! ❤️</h4>
+          <div>
+            <a href="https://github.com/syuChen1" class="mx-3" target="_blank"
+              ><i class="fab fa-github fa-3x"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/siyu-chen-6a7a741b4/"
+              target="_blank"
+              class="mx-3"
+              ><i class="fab fa-linkedin fa-3x"></i
+            ></a>
+            <a href="mailto: siyuchen.dev@gmail.com" class="mx-3"
+              ><i class="far fa-envelope fa-3x"></i
+            ></a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script type="module" src="/main.js"></script>
