--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </li>
             <li class="nav-item">
               <a
-                href="./Siyu_Chen_Resume.pdf"
+                href="./src/Siyu_Chen_Resume.pdf"
                 class="nav-link mx-2"
                 target="_blank"
               >
@@ -210,7 +210,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="./CaSMM.PNG"
+                    src="./src/CaSMM.PNG"
                     class="d-block w-100"
                     alt="CaSMM project"
                   />
@@ -352,7 +352,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="./microtick.PNG"
+                    src="./src/microtick.PNG"
                     class="d-block w-100"
                     alt="microtick project"
                   />
@@ -501,7 +501,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="./shoppingfy.PNG"
+                    src="./src/shoppingfy.PNG"
                     class="d-block w-100"
                     alt="CaSMM project"
                   />
