--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/siyuchen-dev/assets/favicon.7c6391c1.ico" />
 
-    <link href="./src/css/all.css" rel="stylesheet" />
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +22,10 @@
       rel="stylesheet"
     />
     <title>Siyu Chen</title>
-  </head>
+  <script type="module" crossorigin src="/siyuchen-dev/assets/index.4009aa3d.js"></script>
+  <link rel="modulepreload" href="/siyuchen-dev/assets/vendor.671f623d.js">
+  <link rel="stylesheet" href="/siyuchen-dev/assets/index.539f087b.css">
+</head>
   <body>
     <div id="loader-wrapper">
       <div id="loader"></div>
@@ -207,7 +210,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="./src/CaSMM.PNG"
+                    src="/siyuchen-dev/assets/CaSMM.95aec538.PNG"
                     class="d-block w-100"
                     alt="CaSMM project"
                   />
@@ -349,7 +352,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="./src/microtick.PNG"
+                    src="/siyuchen-dev/assets/microtick.a70896c5.PNG"
                     class="d-block w-100"
                     alt="microtick project"
                   />
@@ -498,7 +501,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="./src/shoppingfy.PNG"
+                    src="/siyuchen-dev/assets/shoppingfy.645ae834.PNG"
                     class="d-block w-100"
                     alt="CaSMM project"
                   />
@@ -663,7 +666,7 @@
       </section>
     </main>
 
-    <script type="module" src="/main.js"></script>
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
