updated work experience

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
         <h1>🤿 Hello!</h1>
         <p>
           I am <b>Siyu Chen</b>, a full stack software engineer from 🐊UF. I
-          love building web applications and thrill to see others enjoying my
-          work.
+          enjoy coding and learning new technologies.
         </p>
         <p id="email">
           Get in touch <i class="far fa-hand-point-right"></i>
@@ -145,43 +144,51 @@
             <h5 class="d-inline" style="float: right">Gainesville, Florida</h5>
           </div>
           <div class="my-1">
-            <h4 class="d-inline fw-bolder">Dev Lead</h4>
+            <h4 class="d-inline fw-bolder">
+              Undergraduate Research Assistant / Development Lead
+            </h4>
             <p class="d-inline" style="float: right">
-              <i>June 2021 - Current</i>
+              <i>Feb 2021 - Current</i>
             </p>
           </div>
           <div class="my-3">
-            <p class="my-0">
-              - Leading development team to build a
-              <b>Cloud Arduino IDE</b> under Dr. Christina Gardner-McCune in
-              Engaging Learning Lab.
+            <p class="my-1">
+              - Led the development team to build a Cloud Arduino IDE to support
+              <b>200+</b> elementary school students in building computational
+              models for science experiments.
             </p>
-            <p>
-              - Managing web app scalability for classroom deployment to serve
-              10+ elementary schools and <b>200+</b> 3rd to 5th grade students.
+            <p class="my-1">
+              - Built and maintained app backend with <b>PostgreSQL</b> and
+              <b>Strapi</b> that act as headless content management system to
+              allow better programming flexibility and scalability.
             </p>
-          </div>
-          <div class="my-1">
-            <h4 class="d-inline fw-bolder">Backend Developer</h4>
-            <p class="d-inline" style="float: right">
-              <i>Feb 2021 - June 2021</i>
+            <p class="my-1">
+              - Implemented a service to handle Arduino code compilation and
+              used <b>Redis/Bull</b> to allow <b>pub/sub</b> communication
+              between the application and the service.
             </p>
-          </div>
-          <div class="my-3">
-            <p class="my-0">
-              - Built and maintained <b>headless CMS</b> of an interactive
-              Arduino IDE Web App using <b>Strapi</b>.
-            </p>
-            <p class="my-0">
-              - Remodeled compile server event listener to allow horizontal
-              scaling and improved compile speed by <b>30%</b>.
-            </p>
-            <p>
-              - Implemented Web Serial API to allow users to connect their USB
-              and Bluetooth devices to the App.
+            <p class="my-1">
+              - Managed automatic pipeline that creates Review App and deploys
+              to Staging and Production environment on <b>Heroku</b> with
+              <b>GitHub Action</b>
+              .
             </p>
           </div>
-          <p class="text-muted mt-4 mb-2"></p>
+          <a
+            class="btn btn-light"
+            href="https://github.com/STEM-C/CaSMM"
+            target="_blank"
+            role="button"
+            ><i class="fab fa-github"></i> Github Page</a
+          >
+          <a
+            class="btn btn-light"
+            href="https://www.casmm.org/"
+            target="_blank"
+            role="button"
+            ><i class="fas fa-location-arrow" style="color: darkcyan"></i> Live
+            Demo</a
+          >
         </div>
       </section>
 
