--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item">
               <a
-                href="./src/Siyu_Chen_Resume.pdf"
+                href="./src/Siyu_Chen_Resume3.5.pdf"
                 class="nav-link mx-2"
                 target="_blank"
               >
